# invest-api-rust-sdk

./: Cargo.toml  README.md  build.rs
examples/: get_account_info.rs  order_stream_service.rs  orders_service.rs  sandbox_service.rs  signal_service.rs  stoporders_service.rs  users_service.rs  users_service_interceptor.rs
proto/investment-api/: instruments.proto  operations.proto  orders.proto  stoporders.proto
src/: lib.rs  other.rs  prelude.rs
