[package]
name = "invest-api-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.12.3", features = ["gzip", "tls", "tls-native-roots"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
