[package]
name = "invest-api-rust-sdk"
version = "0.2.0"
edition = "2021"
description = "Invest API SDK is a Rust library that provides a convenient wrapper for gRPC-based interaction with Invest API. It supports interceptor configuration for each service separately and utilizes Tonic for client generation"
license-file = "LICENSE.txt"
keywords = ["api", "invest"]
readme = "README.md"
homepage = "https://github.com/sillent/invest-api-rust-sdk"
authors = ["Dmitry Ulyanov <sillent1987@gmail.com>"]
exclude = [
  "examples/*",
]


[dependencies]
paste = "1.0.15"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.12.3", features = ["gzip", "tls", "tls-native-roots"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
